fixed nav brand container to not cut off logo when shaking

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,7 +17,7 @@ body {
 .landing__graphic {
     --mask: linear-gradient(to bottom, 
       rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 50%, 
-      rgba(0,0,0, 0) 100%, rgba(0,0,0, 0) 0
+      rgba(0,0,0, 0) 98%, rgba(0,0,0, 0) 0
     ) 100% 50% / 100% 100% repeat-x;
 
     opacity: 0.03;
@@ -221,6 +221,9 @@ body {
 .nav__menu__container {
     display: flex;
     align-items: center;
+}
+
+.nav__menu__container {
     overflow: hidden;
 }
 
